sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:7: error: not found: value i
    i=0
    ^AlgCombSort:8: error: not found: value i
      while(i+gap<len){
            ^AlgCombSort:9: error: not found: value i
        if(isSmaller(i+gap,i)){
                     ^AlgCombSort:9: error: not found: value i
        if(isSmaller(i+gap,i)){
                           ^AlgCombSort:10: error: not found: value i
          swap(i,i+gap)
               ^AlgCombSort:10: error: not found: value i
          swap(i,i+gap)
                 ^AlgCombSort:11: error: not found: value i
          i+=1
          ^